// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`nameGenerator bracketNameGenerator nested object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-object"
        >
          <fieldset
            id="root_person"
          >
            <legend
              id="root_person__title"
            >
              person
            </legend>
            <div
              class="form-group rjsf-field rjsf-field-string"
            >
              <label
                class="control-label"
                for="root_person_name"
              >
                name
              </label>
              <input
                aria-describedby="root_person_name__error root_person_name__description root_person_name__help"
                class="form-control"
                id="root_person_name"
                label="name"
                name="root[person][name]"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="form-group rjsf-field rjsf-field-object"
            >
              <fieldset
                id="root_person_address"
              >
                <legend
                  id="root_person_address__title"
                >
                  address
                </legend>
                <div
                  class="form-group rjsf-field rjsf-field-string"
                >
                  <label
                    class="control-label"
                    for="root_person_address_street"
                  >
                    street
                  </label>
                  <input
                    aria-describedby="root_person_address_street__error root_person_address_street__description root_person_address_street__help"
                    class="form-control"
                    id="root_person_address_street"
                    label="street"
                    name="root[person][address][street]"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group rjsf-field rjsf-field-string"
                >
                  <label
                    class="control-label"
                    for="root_person_address_city"
                  >
                    city
                  </label>
                  <input
                    aria-describedby="root_person_address_city__error root_person_address_city__description root_person_address_city__help"
                    class="form-control"
                    id="root_person_address_city"
                    label="city"
                    name="root[person][address][city]"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group rjsf-field rjsf-field-string"
                >
                  <label
                    class="control-label"
                    for="root_person_address_country"
                  >
                    country
                  </label>
                  <input
                    aria-describedby="root_person_address_country__error root_person_address_country__description root_person_address_country__help"
                    class="form-control"
                    id="root_person_address_country"
                    label="country"
                    name="root[person][address][country]"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
              </fieldset>
            </div>
          </fieldset>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator bracketNameGenerator object with additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_name"
          >
            name
          </label>
          <input
            aria-describedby="root_name__error root_name__description root_name__help"
            class="form-control"
            id="root_name"
            label="name"
            name="root[name]"
            placeholder=""
            type="text"
            value="John"
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_customField-key"
                >
                  customField Key
                </label>
                <input
                  class="form-control"
                  id="root_customField-key"
                  type="text"
                  value="customField"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_customField"
              >
                customField
              </label>
              <input
                aria-describedby="root_customField__error root_customField__description root_customField__help"
                class="form-control"
                id="root_customField"
                label="customField"
                name="root[customField]"
                placeholder=""
                type="text"
                value="customValue"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_customField__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator bracketNameGenerator object with mixed types 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_name"
          >
            name
          </label>
          <input
            aria-describedby="root_name__error root_name__description root_name__help"
            class="form-control"
            id="root_name"
            label="name"
            name="root[name]"
            placeholder=""
            type="text"
            value="Alice"
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-number"
        >
          <label
            class="control-label"
            for="root_age"
          >
            age
          </label>
          <input
            aria-describedby="root_age__error root_age__description root_age__help"
            class="form-control"
            id="root_age"
            label="age"
            name="root[age]"
            placeholder=""
            step="any"
            type="number"
            value="30"
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-boolean"
        >
          <div
            class="checkbox "
          >
            <label>
              <input
                aria-describedby="root_active__error root_active__description root_active__help"
                checked=""
                id="root_active"
                name="root[active]"
                type="checkbox"
              />
              <span>
                active
              </span>
            </label>
          </div>
        </div>
        <div
          class="form-group rjsf-field rjsf-field-array"
        >
          <fieldset
            class="rjsf-field rjsf-field-array rjsf-field-array-of-string"
            id="root_tags"
          >
            <legend
              id="root_tags__title"
            >
              tags
            </legend>
            <div
              class="row array-item-list"
            >
              <div
                class="rjsf-array-item"
                style="display: flex; align-items: center;"
              >
                <div
                  class="col-xs-9 col-md-10 col-xl-11"
                >
                  <div
                    class="form-group rjsf-field rjsf-field-string"
                  >
                    <label
                      class="control-label"
                      for="root_tags_0"
                    >
                      tags-1
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </label>
                    <input
                      aria-describedby="root_tags_0__error root_tags_0__description root_tags_0__help"
                      class="form-control"
                      id="root_tags_0"
                      label="tags-1"
                      name="root[tags][0]"
                      placeholder=""
                      required=""
                      type="text"
                      value="developer"
                    />
                  </div>
                </div>
                <div
                  class="col-xs-3 col-md-2 col-xl-1 array-item-toolbox"
                >
                  <div
                    class="btn-group"
                    style="display: flex; justify-content: flex-end; margin-top: 9px;"
                  >
                    <button
                      class="btn btn-default rjsf-array-item-move-up"
                      disabled=""
                      id="root_tags_0__moveUp"
                      title="Move up"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-arrow-up"
                      />
                    </button>
                    <button
                      class="btn btn-default rjsf-array-item-move-down"
                      id="root_tags_0__moveDown"
                      title="Move down"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-arrow-down"
                      />
                    </button>
                    <button
                      class="btn btn-danger rjsf-array-item-remove"
                      id="root_tags_0__remove"
                      title="Remove"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-remove"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="rjsf-array-item"
                style="display: flex; align-items: center;"
              >
                <div
                  class="col-xs-9 col-md-10 col-xl-11"
                >
                  <div
                    class="form-group rjsf-field rjsf-field-string"
                  >
                    <label
                      class="control-label"
                      for="root_tags_1"
                    >
                      tags-2
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </label>
                    <input
                      aria-describedby="root_tags_1__error root_tags_1__description root_tags_1__help"
                      class="form-control"
                      id="root_tags_1"
                      label="tags-2"
                      name="root[tags][1]"
                      placeholder=""
                      required=""
                      type="text"
                      value="designer"
                    />
                  </div>
                </div>
                <div
                  class="col-xs-3 col-md-2 col-xl-1 array-item-toolbox"
                >
                  <div
                    class="btn-group"
                    style="display: flex; justify-content: flex-end; margin-top: 9px;"
                  >
                    <button
                      class="btn btn-default rjsf-array-item-move-up"
                      id="root_tags_1__moveUp"
                      title="Move up"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-arrow-up"
                      />
                    </button>
                    <button
                      class="btn btn-default rjsf-array-item-move-down"
                      disabled=""
                      id="root_tags_1__moveDown"
                      title="Move down"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-arrow-down"
                      />
                    </button>
                    <button
                      class="btn btn-danger rjsf-array-item-remove"
                      id="root_tags_1__remove"
                      title="Remove"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-remove"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <p
                class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-array-item-add"
              >
                <button
                  class="btn btn-info btn-add col-xs-12"
                  id="root_tags__add"
                  title="Add"
                  type="button"
                >
                  <i
                    class="glyphicon glyphicon-plus"
                  />
                </button>
              </p>
            </div>
          </fieldset>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator bracketNameGenerator simple object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_firstName"
          >
            firstName
          </label>
          <input
            aria-describedby="root_firstName__error root_firstName__description root_firstName__help"
            class="form-control"
            id="root_firstName"
            label="firstName"
            name="root[firstName]"
            placeholder=""
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_lastName"
          >
            lastName
          </label>
          <input
            aria-describedby="root_lastName__error root_lastName__description root_lastName__help"
            class="form-control"
            id="root_lastName"
            label="lastName"
            name="root[lastName]"
            placeholder=""
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-number"
        >
          <label
            class="control-label"
            for="root_age"
          >
            age
          </label>
          <input
            aria-describedby="root_age__error root_age__description root_age__help"
            class="form-control"
            id="root_age"
            label="age"
            name="root[age]"
            placeholder=""
            step="any"
            type="number"
            value=""
          />
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator dotNotationNameGenerator nested object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-object"
        >
          <fieldset
            id="root_person"
          >
            <legend
              id="root_person__title"
            >
              person
            </legend>
            <div
              class="form-group rjsf-field rjsf-field-string"
            >
              <label
                class="control-label"
                for="root_person_name"
              >
                name
              </label>
              <input
                aria-describedby="root_person_name__error root_person_name__description root_person_name__help"
                class="form-control"
                id="root_person_name"
                label="name"
                name="root.person.name"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="form-group rjsf-field rjsf-field-object"
            >
              <fieldset
                id="root_person_address"
              >
                <legend
                  id="root_person_address__title"
                >
                  address
                </legend>
                <div
                  class="form-group rjsf-field rjsf-field-string"
                >
                  <label
                    class="control-label"
                    for="root_person_address_street"
                  >
                    street
                  </label>
                  <input
                    aria-describedby="root_person_address_street__error root_person_address_street__description root_person_address_street__help"
                    class="form-control"
                    id="root_person_address_street"
                    label="street"
                    name="root.person.address.street"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group rjsf-field rjsf-field-string"
                >
                  <label
                    class="control-label"
                    for="root_person_address_city"
                  >
                    city
                  </label>
                  <input
                    aria-describedby="root_person_address_city__error root_person_address_city__description root_person_address_city__help"
                    class="form-control"
                    id="root_person_address_city"
                    label="city"
                    name="root.person.address.city"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
              </fieldset>
            </div>
          </fieldset>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator dotNotationNameGenerator object with mixed types 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_name"
          >
            name
          </label>
          <input
            aria-describedby="root_name__error root_name__description root_name__help"
            class="form-control"
            id="root_name"
            label="name"
            name="root.name"
            placeholder=""
            type="text"
            value="Test"
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-number"
        >
          <label
            class="control-label"
            for="root_count"
          >
            count
          </label>
          <input
            aria-describedby="root_count__error root_count__description root_count__help"
            class="form-control"
            id="root_count"
            label="count"
            name="root.count"
            placeholder=""
            step="any"
            type="number"
            value="5"
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-array"
        >
          <fieldset
            class="rjsf-field rjsf-field-array rjsf-field-array-of-string"
            id="root_items"
          >
            <legend
              id="root_items__title"
            >
              items
            </legend>
            <div
              class="row array-item-list"
            >
              <div
                class="rjsf-array-item"
                style="display: flex; align-items: center;"
              >
                <div
                  class="col-xs-9 col-md-10 col-xl-11"
                >
                  <div
                    class="form-group rjsf-field rjsf-field-string"
                  >
                    <label
                      class="control-label"
                      for="root_items_0"
                    >
                      items-1
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </label>
                    <input
                      aria-describedby="root_items_0__error root_items_0__description root_items_0__help"
                      class="form-control"
                      id="root_items_0"
                      label="items-1"
                      name="root.items.0"
                      placeholder=""
                      required=""
                      type="text"
                      value="a"
                    />
                  </div>
                </div>
                <div
                  class="col-xs-3 col-md-2 col-xl-1 array-item-toolbox"
                >
                  <div
                    class="btn-group"
                    style="display: flex; justify-content: flex-end; margin-top: 9px;"
                  >
                    <button
                      class="btn btn-default rjsf-array-item-move-up"
                      disabled=""
                      id="root_items_0__moveUp"
                      title="Move up"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-arrow-up"
                      />
                    </button>
                    <button
                      class="btn btn-default rjsf-array-item-move-down"
                      id="root_items_0__moveDown"
                      title="Move down"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-arrow-down"
                      />
                    </button>
                    <button
                      class="btn btn-danger rjsf-array-item-remove"
                      id="root_items_0__remove"
                      title="Remove"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-remove"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="rjsf-array-item"
                style="display: flex; align-items: center;"
              >
                <div
                  class="col-xs-9 col-md-10 col-xl-11"
                >
                  <div
                    class="form-group rjsf-field rjsf-field-string"
                  >
                    <label
                      class="control-label"
                      for="root_items_1"
                    >
                      items-2
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </label>
                    <input
                      aria-describedby="root_items_1__error root_items_1__description root_items_1__help"
                      class="form-control"
                      id="root_items_1"
                      label="items-2"
                      name="root.items.1"
                      placeholder=""
                      required=""
                      type="text"
                      value="b"
                    />
                  </div>
                </div>
                <div
                  class="col-xs-3 col-md-2 col-xl-1 array-item-toolbox"
                >
                  <div
                    class="btn-group"
                    style="display: flex; justify-content: flex-end; margin-top: 9px;"
                  >
                    <button
                      class="btn btn-default rjsf-array-item-move-up"
                      id="root_items_1__moveUp"
                      title="Move up"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-arrow-up"
                      />
                    </button>
                    <button
                      class="btn btn-default rjsf-array-item-move-down"
                      disabled=""
                      id="root_items_1__moveDown"
                      title="Move down"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-arrow-down"
                      />
                    </button>
                    <button
                      class="btn btn-danger rjsf-array-item-remove"
                      id="root_items_1__remove"
                      title="Remove"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-remove"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <p
                class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-array-item-add"
              >
                <button
                  class="btn btn-info btn-add col-xs-12"
                  id="root_items__add"
                  title="Add"
                  type="button"
                >
                  <i
                    class="glyphicon glyphicon-plus"
                  />
                </button>
              </p>
            </div>
          </fieldset>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`nameGenerator dotNotationNameGenerator simple object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_firstName"
          >
            firstName
          </label>
          <input
            aria-describedby="root_firstName__error root_firstName__description root_firstName__help"
            class="form-control"
            id="root_firstName"
            label="firstName"
            name="root.firstName"
            placeholder=""
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_lastName"
          >
            lastName
          </label>
          <input
            aria-describedby="root_lastName__error root_lastName__description root_lastName__help"
            class="form-control"
            id="root_lastName"
            label="lastName"
            name="root.lastName"
            placeholder=""
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-number"
        >
          <label
            class="control-label"
            for="root_age"
          >
            age
          </label>
          <input
            aria-describedby="root_age__error root_age__description root_age__help"
            class="form-control"
            id="root_age"
            label="age"
            name="root.age"
            placeholder=""
            step="any"
            type="number"
            value=""
          />
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_foo-key"
                >
                  foo Key
                </label>
                <input
                  class="form-control"
                  id="root_foo-key"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_foo"
              >
                foo
              </label>
              <input
                aria-describedby="root_foo__error root_foo__description root_foo__help"
                class="form-control"
                id="root_foo"
                label="foo"
                name="root_foo"
                placeholder=""
                type="text"
                value="foo"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_foo__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields additionalProperties, array type 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-array"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_foo-key"
                >
                  foo Key
                </label>
                <input
                  class="form-control"
                  id="root_foo-key"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_foo"
              >
                foo
              </label>
              <fieldset
                class="rjsf-field rjsf-field-array rjsf-field-array-of-string"
                id="root_foo"
              >
                <legend
                  id="root_foo__title"
                >
                  foo
                </legend>
                <div
                  class="row array-item-list"
                />
                <div
                  class="row"
                >
                  <p
                    class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-array-item-add"
                  >
                    <button
                      class="btn btn-info btn-add col-xs-12"
                      id="root_foo__add"
                      title="Add"
                      type="button"
                    >
                      <i
                        class="glyphicon glyphicon-plus"
                      />
                    </button>
                  </p>
                </div>
              </fieldset>
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_foo__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields additionalProperties, description 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_foo-key"
                >
                  foo Key
                </label>
                <div>
                   
                </div>
                <input
                  class="form-control"
                  id="root_foo-key"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_foo"
              >
                foo
              </label>
              <div
                class="field-description"
                id="root_foo__description"
              >
                item description
              </div>
              <input
                aria-describedby="root_foo__error root_foo__description root_foo__help"
                class="form-control"
                id="root_foo"
                label="foo"
                name="root_foo"
                placeholder=""
                type="text"
                value="foo"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 46px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_foo__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields additionalProperties, label off 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_foo-key"
                >
                  foo Key
                </label>
                <input
                  class="form-control"
                  id="root_foo-key"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_foo"
              >
                foo
              </label>
              <input
                aria-describedby="root_foo__error root_foo__description root_foo__help"
                class="form-control"
                id="root_foo"
                label="foo"
                name="root_foo"
                placeholder=""
                type="text"
                value="foo"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_foo__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields additionalProperties, object type 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-object"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_foo-key"
                >
                  foo Key
                </label>
                <input
                  class="form-control"
                  id="root_foo-key"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_foo"
              >
                foo
              </label>
              <fieldset
                id="root_foo"
              >
                <legend
                  id="root_foo__title"
                >
                  foo
                </legend>
                <div
                  class="form-group rjsf-field rjsf-field-string"
                >
                  <label
                    class="control-label"
                    for="root_foo_foo"
                  >
                    foo
                  </label>
                  <input
                    aria-describedby="root_foo_foo__error root_foo_foo__description root_foo_foo__help"
                    class="form-control"
                    id="root_foo_foo"
                    label="foo"
                    name="root_foo_foo"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
              </fieldset>
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_foo__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_a"
          >
            A
          </label>
          <input
            aria-describedby="root_a__error root_a__description root_a__help"
            class="form-control"
            id="root_a"
            label="A"
            name="root_a"
            placeholder=""
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-number"
        >
          <label
            class="control-label"
            for="root_b"
          >
            B
          </label>
          <input
            aria-describedby="root_b__error root_b__description root_b__help"
            class="form-control"
            id="root_b"
            label="B"
            name="root_b"
            placeholder=""
            step="any"
            type="number"
            value=""
          />
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields show add button and fields if additionalProperties is true and not an object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_additionalProperty-key"
                >
                  additionalProperty Key
                </label>
                <input
                  class="form-control"
                  id="root_additionalProperty-key"
                  type="text"
                  value="additionalProperty"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_additionalProperty"
              >
                additionalProperty
              </label>
              <input
                aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                class="form-control"
                id="root_additionalProperty"
                label="additionalProperty"
                name="root_additionalProperty"
                placeholder=""
                type="text"
                value="should appear"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_additionalProperty__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <legend
          id="root__title"
        >
          Test field
        </legend>
        <div
          class="field-description"
          id="root__description"
        >
          a test description
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_foo-key"
                >
                  foo Key
                </label>
                <input
                  class="form-control"
                  id="root_foo-key"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_foo"
              >
                foo
              </label>
              <input
                aria-describedby="root_foo__error root_foo__description root_foo__help"
                class="form-control"
                id="root_foo"
                label="foo"
                name="root_foo"
                placeholder=""
                type="text"
                value="foo"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_foo__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from both additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <legend
          id="root__title"
        >
          My Field
        </legend>
        <div
          class="field-description"
          id="root__description"
        >
          a fancier description
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_foo-key"
                >
                  foo Key
                </label>
                <input
                  class="form-control"
                  id="root_foo-key"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_foo"
              >
                foo
              </label>
              <input
                aria-describedby="root_foo__error root_foo__description root_foo__help"
                class="form-control"
                id="root_foo"
                label="foo"
                name="root_foo"
                placeholder=""
                type="text"
                value="foo"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_foo__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from both object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <legend
          id="root__title"
        >
          My Field
        </legend>
        <div
          class="field-description"
          id="root__description"
        >
          a fancier description
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_a"
          >
            My Item A
          </label>
          <div
            class="field-description"
            id="root_a__description"
          >
            a fancier item A description
          </div>
          <input
            aria-describedby="root_a__error root_a__description root_a__help"
            class="form-control"
            id="root_a"
            label="My Item A"
            name="root_a"
            placeholder=""
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-number"
        >
          <label
            class="control-label"
            for="root_b"
          >
            My Item B
          </label>
          <div
            class="field-description"
            id="root_b__description"
          >
            a fancier item B description
          </div>
          <input
            aria-describedby="root_b__error root_b__description root_b__help"
            class="form-control"
            id="root_b"
            label="My Item B"
            name="root_b"
            placeholder=""
            step="any"
            type="number"
            value=""
          />
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from uiSchema additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <legend
          id="root__title"
        >
          My Field
        </legend>
        <div
          class="field-description"
          id="root__description"
        >
          a fancier description
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_foo-key"
                >
                  foo Key
                </label>
                <input
                  class="form-control"
                  id="root_foo-key"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_foo"
              >
                foo
              </label>
              <input
                aria-describedby="root_foo__error root_foo__description root_foo__help"
                class="form-control"
                id="root_foo"
                label="foo"
                name="root_foo"
                placeholder=""
                type="text"
                value="foo"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_foo__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from uiSchema object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <legend
          id="root__title"
        >
          My Field
        </legend>
        <div
          class="field-description"
          id="root__description"
        >
          a fancier description
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_a"
          >
            My Item A
          </label>
          <div
            class="field-description"
            id="root_a__description"
          >
            a fancier item A description
          </div>
          <input
            aria-describedby="root_a__error root_a__description root_a__help"
            class="form-control"
            id="root_a"
            label="My Item A"
            name="root_a"
            placeholder=""
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-number"
        >
          <label
            class="control-label"
            for="root_b"
          >
            My Item B
          </label>
          <div
            class="field-description"
            id="root_b__description"
          >
            a fancier item B description
          </div>
          <input
            aria-describedby="root_b__error root_b__description root_b__help"
            class="form-control"
            id="root_b"
            label="My Item B"
            name="root_b"
            placeholder=""
            step="any"
            type="number"
            value=""
          />
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description from uiSchema show add button and fields if additionalProperties is true and not an object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <legend
          id="root__title"
        >
          My Field
        </legend>
        <div
          class="field-description"
          id="root__description"
        >
          a fancier description
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_additionalProperty-key"
                >
                  additionalProperty Key
                </label>
                <input
                  class="form-control"
                  id="root_additionalProperty-key"
                  type="text"
                  value="additionalProperty"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_additionalProperty"
              >
                additionalProperty
              </label>
              <input
                aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                class="form-control"
                id="root_additionalProperty"
                label="additionalProperty"
                name="root_additionalProperty"
                placeholder=""
                type="text"
                value="should appear"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_additionalProperty__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <legend
          id="root__title"
        >
          Test field
        </legend>
        <div
          class="field-description"
          id="root__description"
        >
          a test description
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <label
            class="control-label"
            for="root_a"
          >
            A
          </label>
          <div
            class="field-description"
            id="root_a__description"
          >
            A description
          </div>
          <input
            aria-describedby="root_a__error root_a__description root_a__help"
            class="form-control"
            id="root_a"
            label="A"
            name="root_a"
            placeholder=""
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-number"
        >
          <label
            class="control-label"
            for="root_b"
          >
            B
          </label>
          <div
            class="field-description"
            id="root_b__description"
          >
            B description
          </div>
          <input
            aria-describedby="root_b__error root_b__description root_b__help"
            class="form-control"
            id="root_b"
            label="B"
            name="root_b"
            placeholder=""
            step="any"
            type="number"
            value=""
          />
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description show add button and fields if additionalProperties is true and not an object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <legend
          id="root__title"
        >
          Test field
        </legend>
        <div
          class="field-description"
          id="root__description"
        >
          a test description
        </div>
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="root_additionalProperty-key"
                >
                  additionalProperty Key
                </label>
                <input
                  class="form-control"
                  id="root_additionalProperty-key"
                  type="text"
                  value="additionalProperty"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <label
                class="control-label"
                for="root_additionalProperty"
              >
                additionalProperty
              </label>
              <input
                aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                class="form-control"
                id="root_additionalProperty"
                label="additionalProperty"
                name="root_additionalProperty"
                placeholder=""
                type="text"
                value="should appear"
              />
            </div>
            <div
              class="col-xs-2"
              style="margin-top: 26px;"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_additionalProperty__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description with global label off additionalProperties 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <input
                  class="form-control"
                  id="root_foo-key"
                  type="text"
                  value="foo"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <input
                aria-describedby="root_foo__error root_foo__description root_foo__help"
                class="form-control"
                id="root_foo"
                label="foo"
                name="root_foo"
                placeholder=""
                type="text"
                value="foo"
              />
            </div>
            <div
              class="col-xs-2"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_foo__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description with global label off object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <input
            aria-describedby="root_a__error root_a__description root_a__help"
            class="form-control"
            id="root_a"
            label="A"
            name="root_a"
            placeholder=""
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group rjsf-field rjsf-field-number"
        >
          <input
            aria-describedby="root_b__error root_b__description root_b__help"
            class="form-control"
            id="root_b"
            label="B"
            name="root_b"
            placeholder=""
            step="any"
            type="number"
            value=""
          />
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`object fields with title and description with global label off show add button and fields if additionalProperties is true and not an object 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="form-group rjsf-field rjsf-field-object"
    >
      <fieldset
        id="root"
      >
        <div
          class="form-group rjsf-field rjsf-field-string"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-5 form-additional"
            >
              <div
                class="form-group"
              >
                <input
                  class="form-control"
                  id="root_additionalProperty-key"
                  type="text"
                  value="additionalProperty"
                />
              </div>
            </div>
            <div
              class="form-additional form-group col-xs-5"
            >
              <input
                aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                class="form-control"
                id="root_additionalProperty"
                label="additionalProperty"
                name="root_additionalProperty"
                placeholder=""
                type="text"
                value="should appear"
              />
            </div>
            <div
              class="col-xs-2"
            >
              <button
                class="btn btn-danger rjsf-object-property-remove btn-block"
                id="root_additionalProperty__remove"
                style="border: 0px;"
                title="Remove"
                type="button"
              >
                <i
                  class="glyphicon glyphicon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <p
            class="col-xs-4 col-sm-2 col-lg-1 col-xs-offset-8 col-sm-offset-10 col-lg-offset-11 text-right rjsf-object-property-expand"
          >
            <button
              class="btn btn-info btn-add col-xs-12"
              id="root__add"
              title="Add"
              type="button"
            >
              <i
                class="glyphicon glyphicon-plus"
              />
            </button>
          </p>
        </div>
      </fieldset>
    </div>
    <div>
      <button
        class="btn btn-info "
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;
